--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Server</title>
+  <title>About</title>
   <link rel="stylesheet" href="./css/styles.css">
-  <script src="/js/app.js">  </script>
 </head>
 <body>
+  {{>header}}
   
-  <h1>{{title}}</h1>
-  <p> created by {{name}}</p>
+  <img src="./img/Untitled-1.png">
+  <p>Created by {{name}}</p>
 </body>
 </html>
