--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -9,8 +9,9 @@
 </head>
 <body>
   {{>header}}
-  
+
   <img src="./img/Untitled-1.png">
-  <p>Created by {{name}}</p>
+  
+  {{>footer}}
 </body>
 </html>
