--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Help</title>
-   <link rel="icon" href="/img/cloudy.png">
+  <title>404 page not found</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <div class="main-content">
+    <div class="main-content">
   {{>header}}
-  <p>{{helpText}}</p>
+    <p>{{errorMessage}}</p>
 
-  </div>
+    </div>
   {{>footer}}
 </body>
 </html>
