--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
+   <link rel="icon" href="/img/cloudy.png">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  {{>header}}
-
-  <img src="./img/Untitled-1.png">
+    <div class="main-content">
+       {{>header}}
+      <img class="vector-img" src="./img/Untitled-1.png">
+     </div>
   
   {{>footer}}
 </body>
