the data in the location and forecast is now on the website page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,6 @@ body {
   flex-grow: 1;
 }
 
-
 /* actual code */
 h1 {
   color: grey;
@@ -47,8 +46,34 @@ header a {
   width: 200px;
 }
 
+.about-text-container {
+  float: right;
+  width: 60%;
+  text-align: justify;
+  margin-left: 6%;
+  margin-top: 4%;
+  font-size: 14px;
+}
 
 
+input {
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  padding: 8px;
+}
+
+.icon {
+  height: 18px;
+}
+
+
+.search-button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background-color: bisque;
+  border-radius: 12px;
+ padding: 6px;
+}
 
 
 
