--- a/templates/views/About.hbs
+++ b/templates/views/About.hbs
@@ -12,7 +12,13 @@
     <div class="main-content">
        {{>header}}
       <img class="vector-img" src="./img/Untitled-1.png">
+          <div class="about-text-container">
+              <p> I am Leonel Angelo Guban a Third year IT student from Sorsogon State University.
+                 this is a weather app using nodejs, expressjs and an API from weatherstack.
+               </p>
+          </div>
      </div>
+     
   
   {{>footer}}
 </body>
