--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,10 +16,15 @@
 
       <form action=""> 
         <input type="text" placeholder="Enter Location">
-        <button>
-          <img src="/img/loupe.png" alt="search" style="width: 10px;">
+        <button class="search-button" >
+          <img class="icon" src="/img/loupe.png" alt="search" >
         </button>
       </form>
+
+    <p id="message-1"></p>
+    <p id="message-2"></p>
+
+
   </div>
 
   {{>footer}}
